[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_1 = { path = "./calendar/day_1"}
day_2 = { path = "./calendar/day_2"}
day_3 = { path = "./calendar/day_3"}
day_4 = { path = "./calendar/day_4"}
file_parser = { path = "../file_parser/"}

